Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85116

[REG 5.15] featurePermissionRequested sometimes gets emitted with empty URL in incognito mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.1
    • 5.15.0
    • WebEngine
    • None
    • f41dbaad0f0b554b3168df5456e57c3016bd5e43 (qt/qtwebengine/5.15)

      With some websites, the featurePermissionRequested signal gets emitted with an empty QUrl when they're opened in incognito mode.

      To reproduce this, open simplebrowser and use "File -> New Incognito Window". I've found two pages where this can be reproduced so far:

      • https://expertland.ru/ (first triggers a "correct" feature permission, then one with an empty URL)
      • https://web.telegram.org/ (triggers a permission request with an empty URL right after logging in, then a "correct" one when clicking the menu button)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kiburtse Kirill Burtsev
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes