Reject permission request with invalid origin

At least Push API is supposed to be disabled in incognito mode, which
results in permission request with empty origin.

Fixes: QTBUG-85116
Change-Id: Ie587013d135bf92a84779e6da87e12374f99bfdd
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>